--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
 </head>
 
 <body>
-		<!-- <iframe width="1" height="1" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/79081413&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-	-->
 	<audio autoplay>
   <source src="Ludovico Einaudi - Experience.mp3" type="audio/mpeg"></audio>
 	<div id="mainDiv">
 		<div id="content">
-			<div id="code">
+			<div id="code" style="padding-top: 10px;">
 				<p>Music: Ludovico Einaudi - Experience</p>
 				<p><em>Guess whose birthday it is today?</em></p>
-				<img src="lala.gif" align="left";";> 
+				<img src="lala.gif" align="left";> 
 				<p></p>
 				<p style="clear: left;"><em>Yeah, you are right..</em></p>
 				<pre style='color:#000000;font-size:14px;clear:left'><span style='color:#7f0055; font-weight:bold; '>from</span> People <span style='color:#7f0055; font-weight:bold; '>import</span> Girl
