--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <source src="Ludovico Einaudi - Experience.mp3" type="audio/mpeg"></audio>
 	<div id="mainDiv">
 		<div id="content">
-			<div id="code" style="margin-top: 100px;">
-				<p>Music: Ludovico Einaudi - Experience</p>
+			<div id="code">
+				<p style="margin-top: 100px;">Music: Ludovico Einaudi - Experience</p>
 				<p><em>Guess whose birthday it is today?</em></p>
 				<img src="lala.gif" align="left";> 
 				<p></p>
