--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div id="mainDiv">
 		<div id="content">
 			<div id="code">
-				<p style="margin-top: 100px;">Music: Ludovico Einaudi - Experience</p>
+				<p>Music: Ludovico Einaudi - Experience</p>
 				<p><em>Guess whose birthday it is today?</em></p>
 				<img src="lala.gif" align="left";> 
 				<p></p>
