--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ you = Girl(<span style='color:#2a00ff; '>'Lala Rustamli'</span>)
 	you.meaningfulness += 1	
 	<span style='color:#3f7f59; '># and everything you wish will be achieved</span>
 <span style='color:#3f7f59; '># The last I want to tell is:</span>
-<span style='color:#7f0055; font-weight:bold; '>print</span>(<span style='color:#2a00ff; '>"Happy birthday my lovely vunderkind !"</span>)
+<span style='color:#7f0055; font-weight:bold; '>print</span>(<span style='color:#2a00ff; '>"Happy birthday my lovely stardust !"</span>)
 </pre>
 			</div>
 			<div id="loveHeart">
