--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div id="code">
 				<p>Music: Ludovico Einaudi - Experience</p>
 				<p><em>Guess whose birthday it is today?</em></p>
-				<img src="/lala.gif" align="left";> 
+				<img src="/18/lala.gif" align="left";> 
 				<p style="clear: left;"><em>Yeah, you are right..</em></p>
 				<div style="background: #E3F2FD; overflow:hidden;width:auto;border:solid #E3F2FD;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #008000">/**</span>
 <span style="color: #008000"> * Today, the 4th day of March, is your birthday.</span>
