--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <span style="color: #0000ff">var</span> you = <span style="color: #0000ff">new</span> Girl(<span style="color: #a31515">&#39;Lala Rustamli&#39;</span>);
 <span style="color: #0000ff">var</span> your18thBirthday = <span style="color: #0000ff">new</span> Date(<span style="color: #a31515">&quot;03/04/2017&quot;</span>);
 <span style="color: #0000ff">var</span> todaysDate = <span style="color: #0000ff">new</span> Date();
-<span style="color: #008000">// that&#39;s when you are no longer seen as &quot;detskiy&quot; officially </span>
+<span style="color: #008000">// that&#39;s when you are no longer seen &quot;detskiy&quot; officially </span>
 <span style="color: #0000ff">if</span>(your18thBirthday.setHours(0,0,0,0) == todaysDate.setHours(0,0,0,0)) {
     you.age++;
 }
@@ -60,7 +60,7 @@ console.log(<span style="color: #a31515">&quot;Happy birthday my lovely stardust
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						Wish you a life full of <em>whatever you want</em>.<br/>
+						Wish you a life full of<br /><em>whatever you want</em>.<br/>
 						<div class="signature">- Fardin</div>
 					</div>
 				</div>
