--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<span style="color: #008000">// and everything you wish will be achieved</span>
 }
 <span style="color: #008000">// The last I want to tell is:</span>
-console.log(<span style="color: #a31515">&quot;Happy birthday my lovely stardust!&quot;</span>)
+console.log(<span style="color: #a31515">&quot;Happy birthday my lovely stardust!&quot;;</span>)
 </pre></div>
 			</div>
 			<div id="loveHeart">
